plugins {
    id 'java'
    id 'application'
}

group = 'com.pricemonitorbot'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // Guava utilities
    implementation 'com.google.guava:guava:32.1.2-jre'
    
    // Hibernate ORM
    implementation 'org.hibernate.orm:hibernate-core:6.4.0.Final'
    implementation 'org.hibernate.orm:hibernate-jcache:6.4.0.Final'
    // Jakarta Persistence API
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    // JSON parsing
    implementation 'org.json:json:20230227'
    
    // Database driver (adjust based on your database)
    implementation 'org.postgresql:postgresql:42.7.0'
    
    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.11'
    implementation 'org.slf4j:slf4j-simple:2.0.11'
    
    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

application {
    mainClass = 'com.pricemonitorbot.app.Main'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
